--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.MainPageActivity">
+    tools:context=".ui.activity.mainpage.MainPageActivity">
 
     <TextView
         android:id="@+id/main_floor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3층"
+        android:text="3F"
         android:textColor="@color/black"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/footer_container"
@@ -72,19 +72,21 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/card_fragment_container"
         android:layout_width="311dp"
-        android:layout_height="506dp"
+        android:layout_height="450dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.636" />
+        app:layout_constraintVertical_bias="0.587" />
+
+    <!-- FragmentContainerView for the footer -->
 
     <ImageView
         android:id="@+id/main_record"
         android:layout_width="49dp"
         android:layout_height="49dp"
-        android:layout_marginTop="483dp"
+        android:layout_marginTop="427dp"
         android:src="@drawable/record"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +94,6 @@
         app:layout_constraintTop_toTopOf="@+id/card_fragment_container"
         app:layout_constraintVertical_bias="0.0" />
 
-    <!-- FragmentContainerView for the footer -->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/footer_container"
         android:layout_width="0dp"
