--- a/app/src/main/res/layout/fragment_floor_select.xml
+++ b/app/src/main/res/layout/fragment_floor_select.xml
@@ -4,275 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TableLayout
-        android:layout_width="286dp"
-        android:layout_height="320dp"
-        android:padding="20dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/floor_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="층 선택"
-                android:textColor="@color/black"
-                android:textSize="22dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.197" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
-
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                >
-                <ImageView
-                    android:id="@+id/floorB1"
-                    android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    app:srcCompat="@drawable/floor" />
-
-                <TextView
-                    android:id="@+id/textB1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="B1"
-                    android:textColor="@color/black" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                >
-
-                <ImageView
-                    android:id="@+id/floorB2"
-                    android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    app:srcCompat="@drawable/floor" />
-
-                <TextView
-                    android:id="@+id/textB2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="B2"
-                    android:textColor="@color/black" />
-
-            </FrameLayout>
-
-
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                >
-                <ImageView
-                    android:id="@+id/floorB3"
-                    android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    app:srcCompat="@drawable/floor" />
-
-                <TextView
-                    android:id="@+id/textB3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="B3"
-                    android:textColor="@color/black" />
-            </FrameLayout>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
-
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                >
-                <ImageView
-                    android:id="@+id/floor1"
-                    android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    app:srcCompat="@drawable/floor" />
-
-                <TextView
-                    android:id="@+id/text1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="1"
-                    android:textColor="@color/black" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                >
-                <ImageView
-                    android:id="@+id/floor2"
-                    android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    app:srcCompat="@drawable/floor" />
-
-                <TextView
-                    android:id="@+id/text2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="2"
-                    android:textColor="@color/black" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                >
-                <ImageView
-                    android:id="@+id/floor3"
-                    android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    app:srcCompat="@drawable/floor" />
-
-                <TextView
-                    android:id="@+id/text3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="3"
-                    android:textColor="@color/black" />
-            </FrameLayout>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
-
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                >
-                <ImageView
-                    android:id="@+id/floor4"
-                    android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    app:srcCompat="@drawable/floor" />
-
-                <TextView
-                    android:id="@+id/text4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="4"
-                    android:textColor="@color/black" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                >
-                <ImageView
-                    android:id="@+id/floor5"
-                    android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    app:srcCompat="@drawable/floor" />
-
-                <TextView
-                    android:id="@+id/text5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="5"
-                    android:textColor="@color/black" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                >
-                <ImageView
-                    android:id="@+id/floor6"
-                    android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/floor" />
-
-                <TextView
-                    android:id="@+id/text6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="6"
-                    android:textColor="@color/black" />
-            </FrameLayout>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
-
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                >
-                <ImageView
-                    android:id="@+id/floor7"
-                    android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/floor" />
-
-                <TextView
-                    android:id="@+id/text7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="7"
-                    android:textColor="@color/black" />
-            </FrameLayout>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="center">
-            <FrameLayout
-                android:id="@+id/confirm_button_container"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_gravity="center">
-            </FrameLayout>
-        </TableRow>
-    </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
