--- a/app/src/main/res/layout/fragment_mypage_recording_list.xml
+++ b/app/src/main/res/layout/fragment_mypage_recording_list.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.MypageRecordingListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="mypage recording list" />
+        android:padding="16dp" />
 
 </FrameLayout>
