--- a/app/src/main/res/drawable-v24/dept_item_background.xml
+++ b/app/src/main/res/drawable-v24/dept_item_background.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#106372AD" />
+    <solid android:color="@color/white" />
     <corners android:radius="10dp" />
     <stroke android:width="3dp" android:color="#000000" />
 </shape>
