--- a/app/src/main/res/layout/item_department.xml
+++ b/app/src/main/res/layout/item_department.xml
@@ -1,34 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center">
+    android:padding="6dp">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/dept_search_title"
-            android:layout_width="match_parent"
+        android:layout_marginTop="8dp"
+        android:padding="25dp"
+        android:background="@drawable/dept_item_background">
+
+        <LinearLayout
+            android:id="@+id/text_container"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="더 현대 서울"
-            />
-        <TextView
-            android:id="@+id/dept_search_branch"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15dp"
-            android:text="여의도" />
-    </LinearLayout>
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintHorizontal_chainStyle="spread_inside">
+
+            <TextView
+                android:id="@+id/dept_search_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:text="더 현대 서울"
+                android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/dept_search_branch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textSize="14sp"
+                android:text="여의도점"
+                android:textColor="@color/grey" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/dept_image"
-        android:layout_width="64dp"
-        android:layout_height="133dp"
-        android:layout_marginRight="10dp"
-        android:src="@drawable/dept1" />
-</LinearLayout>
+        android:layout_width="50dp"
+        android:layout_height="100dp"
+        android:layout_gravity="end|top"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="0dp"
+        android:src="@drawable/dept_1" />
+</FrameLayout>
