--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -17,6 +17,42 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/button_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.855"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.076">
+
+            <ImageView
+                android:id="@+id/button_icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:adjustViewBounds="true"
+                android:background="@drawable/location"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/button_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:text="지도 보기"
+                android:textColor="@color/black"
+                android:textFontWeight="600"
+                android:textSize="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/button_icon"
+                app:layout_constraintStart_toStartOf="@+id/button_icon"
+                app:layout_constraintEnd_toEndOf="@+id/button_icon" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <TextView
             android:id="@+id/main_floor"
             android:layout_width="wrap_content"
@@ -70,17 +106,6 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/button_fragment_container"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.855"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.076" />
-
-        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/card_fragment_container"
             android:layout_width="311dp"
             android:layout_height="450dp"
@@ -90,8 +115,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.587" />
-
-        <!-- FragmentContainerView for the footer -->
 
         <ImageView
             android:id="@+id/main_record"
