--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -61,9 +61,8 @@
             android:textColor="@color/black"
             android:textSize="30dp"
             app:layout_constraintBottom_toTopOf="@+id/footer_container"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.133"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/main_dept_title"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.071" />
 
@@ -71,6 +70,7 @@
             android:id="@+id/main_up_down"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginStart="5dp"
             android:background="@drawable/up_down"
             app:layout_constraintBottom_toBottomOf="@+id/main_floor"
             app:layout_constraintStart_toEndOf="@+id/main_floor"
@@ -83,7 +83,6 @@
             android:layout_height="wrap_content"
             android:text="더 현대 서울"
             android:textColor="@color/black"
-            android:textFontWeight="600"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +97,6 @@
             android:layout_height="wrap_content"
             android:text="여의도점"
             android:textColor="@color/black"
-            android:textFontWeight="600"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/main_dept_title"
