--- a/app/src/main/res/layout/fragment_floor_item.xml
+++ b/app/src/main/res/layout/fragment_floor_item.xml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp">
+    android:layout_margin="10dp">
 
     <ImageView
         android:id="@+id/floor_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/floor" />
+        android:scaleType="center"
+        app:layout_constraintWidth_percent="1"
+        app:layout_constraintHeight_percent="1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/ripple_effect"
+        app:srcCompat="@drawable/ic_floor" />
 
     <TextView
         android:id="@+id/floor_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:background="@android:color/transparent"
+        android:gravity="center"
+        android:text="1F"
         android:textColor="@color/black"
-        android:textSize="16sp"/>
-</FrameLayout>
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/floor_image"
+        app:layout_constraintEnd_toEndOf="@+id/floor_image"
+        app:layout_constraintStart_toStartOf="@+id/floor_image"
+        app:layout_constraintTop_toTopOf="@+id/floor_image" />
+</androidx.constraintlayout.widget.ConstraintLayout>
