--- a/app/src/main/res/layout/fragment_floor_select.xml
+++ b/app/src/main/res/layout/fragment_floor_select.xml
@@ -3,16 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:padding="24dp">
+
+    <TextView
+        android:id="@+id/choose_floor_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="층 선택"
+        android:textColor="@color/black"
+        android:textSize="26sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/floor_recycler_view" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/floor_recycler_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        app:layout_constraintTop_toBottomOf="@id/choose_floor_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
