--- a/app/src/main/res/layout/fragment_record_modal.xml
+++ b/app/src/main/res/layout/fragment_record_modal.xml
@@ -121,6 +121,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:hint="타이틀을 입력해주세요."
+            android:textColorHint="@color/grey"
             android:textColor="@color/black"
             android:textSize="17dp"
             android:visibility="gone"
