--- a/app/src/main/res/layout/fragment_record_modal.xml
+++ b/app/src/main/res/layout/fragment_record_modal.xml
@@ -17,7 +17,7 @@
         android:topRightRadius="20dp">
 
         <ImageView
-            android:id="@+id/imageView11"
+            android:id="@+id/modalBar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="32dp"
@@ -116,23 +116,30 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.573" />
 
+
         <EditText
             android:id="@+id/titleText"
-            android:layout_width="200dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:hint="타이틀을 입력해주세요."
-            android:textColorHint="@color/grey"
-            android:textColor="@color/black"
-            android:textSize="17dp"
-            android:visibility="gone"
+            android:layout_marginTop="64dp"
+            android:background="@drawable/edittext_bottom_dotted_line"
+            android:ellipsize="end"
+            android:hint="타이틀을 입력해주세요"
             android:maxLength="10"
-            android:background="@null"
+            android:padding="10dp"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:textAlignment="textStart"
+            android:textColor="@color/black"
+            android:textColorHint="@color/dark_grey"
+            android:textSize="16sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.307"
+            app:layout_constraintEnd_toStartOf="@+id/confirmButtonInclude"
+            app:layout_constraintHorizontal_bias="0.608"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView11"
-            app:layout_constraintVertical_bias="0.813" />
+            app:layout_constraintTop_toTopOf="@+id/modalBar"
+            app:layout_constraintVertical_bias="0.795" />
 
         <include
             android:id="@+id/confirmButtonInclude"
@@ -144,7 +151,7 @@
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.875"
+            app:layout_constraintHorizontal_bias="0.911"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
@@ -191,6 +198,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.565" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
