--- a/app/src/main/res/layout/fragment_mypage_recording_list.xml
+++ b/app/src/main/res/layout/fragment_mypage_recording_list.xml
@@ -9,7 +9,9 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp" />
+        android:paddingTop="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp" />
 
     <TextView
         android:id="@+id/empty_state_text"
