--- a/app/src/main/res/layout/item_admin_record.xml
+++ b/app/src/main/res/layout/item_admin_record.xml
@@ -38,7 +38,7 @@
             android:id="@+id/action_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/trash"
+            android:src="@drawable/ic_trash"
             android:visibility="gone" />
     </LinearLayout>
 
